# matrix-malos-wakeword

./: .drone.yml  .gitignore  README.md  matrix-creator-malos-wakeword.service  matrixio-malos-wakeword.service
.drone/: slack.tpl
assets/: 9854.dic  9854.lm  9854.log_pronounce  9854.sent  9854.vocab
debian/: README.Debian  changelog  control  copyright  matrix-creator-malos-wakeword.install  matrixio-malos-wakeword.install  postinst  prerm  rules
src/: .CMakeLists.txt.swp  CMakeLists.txt  driver_manager.cpp  driver_manager.h  driver_wakeword.cpp  driver_wakeword.h  driver_zigbee.h  malos_psphinx.cpp  malos_wakeword.cpp  malos_zigbee.cpp  psphix_wakeword.cpp
src/js_test/: package.json  test_continous_recognition.js  test_wakeword.js  test_wakeword_mia.js
